--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.3",
     "eslint-plugin-react": "^7.37.5",
+    "link-module-alias": "^1.2.0",
     "prettier": "^3.6.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -29,7 +30,14 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint:fix": "eslint --fix 'src/**/*.{ts,tsx}'"
+    "lint:fix": "eslint --fix 'src/**/*.{ts,tsx}'",
+    "postinstall": "link-module-alias clear && link-module-alias"
+  },
+  "_moduleAliases": {
+    "~": "./src",
+    "~components": "./src/components",
+    "~helpers": "./src/helpers",
+    "~pages": "./src/pages"
   },
   "eslintConfig": {
     "extends": [
@@ -52,7 +60,6 @@
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "css-loader": "^7.1.2",
-    "daisyui": "^5.0.50",
     "postcss": "^8.5.6",
     "postcss-loader": "^8.1.1",
     "style-loader": "^4.0.0",
